WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97871
RenderImage should not use shadowAncestorNode
https://bugs.webkit.org/show_bug.cgi?id=97871
Summary
RenderImage should not use shadowAncestorNode
Shinya Kawanaka
Reported
2012-09-27 23:58:24 PDT
Since node()->shadowAncestorNode() does not return NULL, this if statement will never fail. This should be shadowHost().
Attachments
Patch
(1.51 KB, patch)
2012-09-28 00:01 PDT
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.54 KB, patch)
2012-10-08 21:42 PDT
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.56 KB, patch)
2013-01-06 21:06 PST
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Shinya Kawanaka
Comment 1
2012-09-28 00:01:26 PDT
Created
attachment 166158
[details]
Patch
Eric Seidel (no email)
Comment 2
2012-09-28 09:01:40 PDT
I'm confused. How is this covered by existing tests? Is it a behavior change?
Dimitri Glazkov (Google)
Comment 3
2012-09-28 09:15:43 PDT
(In reply to
comment #2
)
> I'm confused. How is this covered by existing tests? Is it a behavior change?
It's not, it's a fix in the logic. shadowAncestorNode is a weird cousin of shadowRoot. We're trying to get rid of this weird cousin and in this particular case shadowRoot and shadowAncestorNode can be used interchangeably. So, the ChangeLog should say: No change in logic, refactoring.
Dimitri Glazkov (Google)
Comment 4
2012-09-28 09:16:00 PDT
Comment on
attachment 166158
[details]
Patch Please fix the ChangeLog before landing.
Shinya Kawanaka
Comment 5
2012-10-08 21:42:08 PDT
Created
attachment 167687
[details]
Patch for landing
WebKit Review Bot
Comment 6
2012-10-08 22:13:56 PDT
Comment on
attachment 167687
[details]
Patch for landing Rejecting
attachment 167687
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/14214605
Shinya Kawanaka
Comment 7
2013-01-06 21:06:47 PST
Created
attachment 181472
[details]
Patch for landing
Shinya Kawanaka
Comment 8
2013-01-06 21:07:48 PST
I didn't notice this patch was not committed yet. rebase on ToT, and cq+.
WebKit Review Bot
Comment 9
2013-01-06 22:04:37 PST
Comment on
attachment 181472
[details]
Patch for landing Clearing flags on attachment: 181472 Committed
r138922
: <
http://trac.webkit.org/changeset/138922
>
WebKit Review Bot
Comment 10
2013-01-06 22:04:41 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug