RenderImage should not use shadowAncestorNode https://bugs.webkit.org/show_bug.cgi?id=97871

Reviewed by Dimitri Glazkov.

Since shadowAncestorNode() does not return 0, this if-condition will never hold.
shadowHost() should be used instead.

No change in logic, refactoring.

* rendering/RenderImage.cpp:
(WebCore::RenderImage::hostImageElement):


Canonical link: https://commits.webkit.org/124391@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138922 268f45cc-cd09-0410-ab3c-d52691b4dbfc